feat: make the time come from db

--- a/src/views/pages/lobby.ejs
+++ b/src/views/pages/lobby.ejs
@@ -1,8 +1,7 @@
 <%- include('header'); -%>
-
     <div class="d-flex justify-content-center align-items-center hugetext" style="height: 100vh;">
         <h1 class="display-1">
-            10:56
+            <%= time %>
         </h1>
     </div>
 
