feat: lobby countdown

--- a/src/views/pages/voting.ejs
+++ b/src/views/pages/voting.ejs
@@ -1,7 +1,7 @@
 <%- include('header'); -%>
 
     <body>
-        <div class="h1" id="time-counter">5:00</div>
+        <div class="h1" id="time-counter"></div>
 
         <main class="d-flex justify-content-center align-items-center h1" style="height: 100vh">
             <form name="form1" method="POST" action="">
@@ -30,5 +30,6 @@
             </form>
         </main>
     </body>
+    <script src="../js/countdown_voting.js"></script>
 
 </html>
