login failed error on page

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -32,5 +32,10 @@
                 </td>
             </tr>
         </table>
+        <% if (error) { %>
+            <div class="alert alert-danger" role="alert">
+                <%= error %>
+            </div>
+        <% } %>
     </form>
 </main>
