--- a/src/views/pages/lobby.ejs
+++ b/src/views/pages/lobby.ejs
@@ -1,6 +1,6 @@
 <%- include('header'); -%>
 <div class="d-flex justify-content-center align-items-center hugetext" style="height: 100vh;">
-    <h1 class="display-1" id="countdown" data-time="<%= time %>"></h1>
+    <h1 class="display-1" id="countdown" data-time="<%= time %>" voted="<%= voted %>"></h1>
 </div>
 <script src="../js/countdown.js"></script>
 </html>
