feat: logout button for lobby

--- a/src/views/pages/lobby.ejs
+++ b/src/views/pages/lobby.ejs
@@ -3,5 +3,6 @@
     <h1 class="display-1" id="countdown" data-time="<%= time %>" voted="<%= voted %>"></h1>
     <%- include('loader'); -%>
 </div>
+<div class="btn btn-primary d-flex justify-content-center" id="logout">Log out</div>
 <script src="../js/countdown.js"></script>
 </html>
