--- a/src/views/pages/admin.ejs
+++ b/src/views/pages/admin.ejs
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+<script src="../js/flatpickr.js"></script>
 <script>
     flatpickr("#voting-start-time", {
         enableTime: true,
