fix(minor): in voting change yes and no to poolt and vastu

--- a/src/views/pages/voting.ejs
+++ b/src/views/pages/voting.ejs
@@ -14,8 +14,8 @@
                     <tr>
                         <td>
                             <select id="otsus" class="form-control h1" name="otsus">
-                                <option value="poolt">Yes</option>
-                                <option value="vastu">No</option>
+                                <option value="poolt">Poolt</option>
+                                <option value="vastu">Vastu</option>
                             </select>
                         </td>
                     </tr>
