--- a/src/views/pages/voting.ejs
+++ b/src/views/pages/voting.ejs
@@ -1,5 +1,7 @@
-<%- include('header'); -%>
-
+<html>
+    <head>
+        <%- include('header'); -%>
+    </head>
     <body>
         <div class="h1" id="time-counter"></div>
 
@@ -29,7 +31,6 @@
                 </table>
             </form>            
         </main>
+        <script src="../js/countdown_voting.js"></script>
     </body>
-    <script src="../js/countdown_voting.js"></script>
-
 </html>
