enhancement: added notification on vote, removed delay in the vote timer, vote_submit => voting

--- a/src/views/css/styles.css
+++ b/src/views/css/styles.css
@@ -14,3 +14,9 @@
     transform: translateX(-50%);
     width: 100%;
 }
+
+.notification {
+    position: absolute;
+    right: 10px;
+    top: 15px;
+}
