--- a/src/views/pages/voting.ejs
+++ b/src/views/pages/voting.ejs
@@ -3,10 +3,17 @@
         <%- include('header'); -%>
     </head>
     <body>
+        <% if (locals.user_choice) { %>
+            <div class="alert alert-success alert-dismissible fade show notification" role="alert">
+                Your vote has been saved!
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+            </div>
+        <% } %>
         <div class="h1" id="time-counter"></div>
-
         <main class="d-flex justify-content-center align-items-center h1" style="height: 100vh">
-            <form name="form1" method="POST" action="/vote_submit">
+            <form name="form1" method="POST" action="/voting">
                 <table>
                     <tr>
                         <td>
@@ -16,8 +23,8 @@
                     <tr>
                         <td>
                             <select id="otsus" class="form-control h1" name="otsus">
-                                <option value="poolt">Poolt</option>
-                                <option value="vastu">Vastu</option>
+                                <option value="poolt" <%= locals?.user_choice === 'poolt' ? 'selected' : '' %>>Poolt</option>
+                                <option value="vastu" <%= locals?.user_choice === 'vastu' ? 'selected' : '' %>>Vastu</option>
                             </select>
                         </td>
                     </tr>
