fix. wrong row from db

--- a/src/views/pages/admin.ejs
+++ b/src/views/pages/admin.ejs
@@ -59,7 +59,7 @@
                                                         <div class="card-body">
                                                             <h5 class="card-title text-center"><%= new Date(tulemus.h_alguse_aeg).toLocaleString('en-US', {dateStyle: 'short', timeStyle: 'short'}) %></h5>
                                                             <p class="card-text">Poolt: <%= tulemus.poolt_hääled %></p>
-                                                            <p class="card-text">Vastu: <%= tulemus.poolt_hääled %></p>
+                                                            <p class="card-text">Vastu: <%= tulemus.vastu_hääled %></p>
                                                         </div>
                                                     </div>
                                                 <% }) %>
