fix: save => login

--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -30,7 +30,7 @@
                     <tr>
                         <td>
                             <div class="form-group">
-                                <input class="btn btn-primary btn-block" type="submit" value="Save">
+                                <input class="btn btn-primary btn-block" type="submit" value="Login">
                             </div>
                         </td>
                     </tr>
